Enable pagination for instances endpoint.
